# fielddata

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  problem.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260406_000001_initial_schema.py
app/: main.py
app/api/: dependencies.py  router.py
app/api/routes/: alerts.py  fields.py  forecasts.py  health.py  internal.py  notifications.py
app/core/: config.py  events.py  time.py
app/db/: session.py
app/models/: __init__.py  alert.py  enums.py  field.py  forecast.py  notification.py  user.py
app/schemas/: alert.py  common.py  field.py  forecast.py  notification.py
app/seeds/: bootstrap.py
app/services/: alert_evaluator.py
app/workers/: main.py
tests/: conftest.py
tests/integration/: test_alerts_api.py
tests/unit/: test_alert_evaluator.py
